# hexlet-hello-world

./: hexlet_hello_world.py  module.py  pyproject.toml
my_application/: hexlet_hello_world.py  module.py
my_application/scripts/: main.py  second_script.py
